# oop_exercise_01

./: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  main.cpp  run
include/: money.hpp
lib/catch2/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  money.cpp  test.cpp
test/: CMakeLists.txt  test.cpp
